--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@200&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
-  <body>
+  <body class="body">
     <div class="firstsec container border rounded">
       <div class="nav1 d-flex justify-content-evenly">
         <p class="text-warning display-6">ballon</p>
@@ -47,8 +51,10 @@
         </div>
       </div>
       <p class="travel text-light">TRAVELS</p>
-      <p class="heading display-1 text-warning">EMBARK ON A JOURNEY</p>
-      <p class="heading2 display-1 text-warning">OF A LIFE TIME</p>
+      <p class="heading display-1 text-warning text-center">
+        EMB<span class="text-light">A</span>RK ON A JOURNE<span class="text-light">Y</span>
+      </p>
+      <p class="display-1 text-warning text-center">OF A LIF<span class="text-light">E</span>TIME</p>
       <p class="text-center text-light">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
         voluptatem itaque est, nemo iusto asperiores <br />
@@ -60,6 +66,30 @@
       >
         Book now
       </button>
+    </div>
+    </div>
+    <div class="secondsec container d-flex mt-5">
+      <img class="img" src="https://images.unsplash.com/photo-1480812494744-bfed1358a9b7?q=80&w=1888&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" height="280px" width="230px">
+      <div class="text">
+      <p class="text-warning display-1">TH<span class="text-light">E</span>ART OF</p>
+      <p class="text-warning display-1">TAIL<span class="text-light">O</span>RED TR<span class="text-light">A</span>VEL</p>
+    </div>
+    <div>
+    <img class="img1 mt-2" src="https://images.unsplash.com/photo-1596237563267-84ffd99c80e1?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" height="140px" width="120px">
+    <img class="img2 mt-5 " src="https://plus.unsplash.com/premium_photo-1672146827840-4c2226f0bcb8?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" height="140px" width="120px">
+  </div>
+    </div>
+    <div class=" thirdsec container  mt-5 d-flex justify-content-evenly">
+      <div>
+<h3 class="text-light fw-bold"> Our airline flies</h3>
+<h3 class="text-light fw-bold">greener</h3></div>
+<div>
+  <h3 class="text-light fw-bold"> Your Ideal</h3>
+  <h3 class="text-light fw-bold">destination partner</h3></div>
+  <div>
+    <h3 class="text-light fw-bold"> Using Ai for better </h3>
+    <h3 class="text-light fw-bold"> experience</h3></div>
+
     </div>
   </body>
 </html>
