Add fourth, fifth, and sixth sections to the index.html page.

--- a/index.html
+++ b/index.html
@@ -91,5 +91,47 @@
     <h3 class="text-light fw-bold"> experience</h3></div>
 
     </div>
+    <div class="fourthsec container  d-flex justify-content-evenly">
+      <div class="text-center text-light ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque temporibus est placeat sequi accusantium! Lorem, ipsum dolor.</div>
+      <div class="text-center text-light ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque temporibus est placeat sequi accusantium! Lorem, ipsum dolor.</div>
+      <div class="text-center text-light ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, cumque temporibus est placeat sequi accusantium! Lorem, ipsum dolor.</div>
+    </div>
+    <div class="fifthsec container d-flex justify-content-evenly mt-5">
+      <div class="d-flex ">
+      <div class="  bg-light pic1 mt-5">
+        <img class="mt-2 ms-2" src="https://plus.unsplash.com/premium_photo-1661677916240-d2562f571877?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""
+        height="150px" width="220px">
+      </div>
+      <div class=" bg-light pic2 ">
+        <img class="mt-2 ms-2" src="https://images.unsplash.com/photo-1436303892196-e039f81a04aa?q=80&w=2007&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""
+        height="150px" width="220px">
+      </div>
+      </div>
+      <div class="box1 text-center mt-5">
+        <p class="fw-bolder h1 text-light">15+</p>
+        <p class="text-warning">Years of experience</p>
+      </div>
+      <div class="box1 text-center mt-5">
+        <p class="fw-bolder h1 text-light">25M+</p>
+        <p class="text-warning">Happy Travelers</p>
+      </div>
+      <div class="box1 text-center mt-5">
+        <p class="fw-bolder h1 text-light">550+</p>
+        <p class="text-warning">Unique Destinations</p>
+      </div>
+    </div>
+    <div class="sixsec container mt-6">
+      <h1 class="text-warning fw-bolder display-1">DISC<span class="text-light">O</span>VER POPULA<span class="text-light">R</span> </h1>
+      <h1 class="text-warning fw-bolder display-1">DESTIN<span class="text-light">A</span>TIONS</h1>
+
+
+<button type="button" class="btn me-4 " style="background-color: #ffef63; color: black;">POPULAR</button>
+<button type="button" class="btn me-4 text-light" style="background-color: #0e2f1a;">UNITED STATE</button>
+<button type="button" class="btn me-4 text-light" style="background-color: #0e2f1a;">EUROPE</button>
+<button type="button" class="btn me-4 text-light" style="background-color: #0e2f1a;">ASIA</button>
+<button type="button" class="btn me-4 text-light" style="background-color: #0e2f1a;">AFRICA</button>
+<button type="button" class="btn me-4 text-light" style="background-color: #0e2f1a;">SOUTH AMERICA</button>
+<button type="button" class="btn me-4 text-light" style="background-color: #0e2f1a;">CANADA</button>
+    </div>
   </body>
 </html>
